# datadocweb

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
core/: settings.py  urls.py
core/static/core/templates/: template.json  template.xlsx  template.yaml
datadoc/: apps.py  datatable.py  datatable_gen.py  datatable_schema.py  datatable_storage.py  urls.py  utils.py  views.py
datadoc/static/datadoc/css/: styles.css
datadoc/templates/datadoc/: base.html  index.html
datadoc/templates/datadoc/components/: dialog.html  header.html  link.html  pagination.html  table.html
datadoc/templates/datadoc/partials/: dropzone.html  templates.html
datadoc/templates/datadoc/views/: datatable-schema.html  datatable.html  edit_form.html  explore.html  home.html  table.html  upload.html  upload_file.html  upload_url.html
datadoc/tests/templates/components/: test_header.py
datadoc/tests/templates/partials/: test_dropzone.py  test_partial_templates.py
datadoc/tests/templates/views/: test_edit_form.py  test_upload_url.py
datadoc/tests/views/: test_csv_form.py  test_upload_file_urls.py  test_upload_files.py
docs/: dataset-editor.html  dataset-editor.md
docs/design/: Matchmaker doc system mockups.drawio  Matchmaker doc system mockupsV2.drawio.html
src/datadocweb/: __init__.py  datadoc.py  storage.py
src/datadocweb/django/: __init__.py  apps.py  appview.py  urls.py  views.py
src/datadocweb/django/templates/: datadocweb-home.html  datadocweb-home.js  datadocweb-register.html  datadocweb-upload.html  datadocweb-upload.js
tests/: test_datadoc.py  test_storage.py
tests/django_project/: manage.py
tests/django_project/dashboard/: urls.py  views.py
tests/django_project/dashboard/templates/: about.html  content.html  index.html  layout.html  unauthorized.html
tests/django_project/django_project/: settings.py  urls.py
tests/input/: tem.csv  tem.json
